--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,14 @@ services:
       restart: always
       ports:
           - "127.0.0.1:8083:8080"
+  redis:
+      image: redis:alpine
+      container_name: redis_cache
+      restart: always
+      ports:
+          - "127.0.0.1:6379:6379"
+      volumes:
+          - redis_data:/data
   postgres:
       image: postgres:18
       container_name: postgres_db
