--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,22 @@
 spring:
+  application:
+    name: Pajak DTHRTH Test
+  datasource:
+    url: jdbc:postgresql://localhost:5432/pajak_dthrth
+    username: admin
+    password: admin
+    driver-class-name: org.postgresql.Driver
   flyway:
     enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
