--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -8,6 +8,9 @@ spring:
     driver-class-name: org.postgresql.Driver
   flyway:
     enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    clean-disabled: false
   jpa:
     hibernate:
       ddl-auto: validate
